2012-01-19  Jérôme Pasquier  <rainbru@free.fr>

	* src/tool/log_reader.rb: print execution date and time in the UI.

	* src/LoggerOutput*.cpp (LogHeader): print execution date and time
	according to the output style.

	* src/Logger.cpp (init): feed the execution date and time fields.
	* src/LoggerOutput.hpp (LogHeader): added execution date and time 
	fields.

2012-01-12  Jérôme Pasquier  <rainbru@free.fr>

	* src/Logger.hpp (init): uses default values to set binary compilation
	date and time and not the library ones.

2012-01-11  Jérôme Pasquier  <rainbru@free.fr>

	* src/tool/log_reader.rb: print compil date and time in the UI.

	* src/LoggerOutput*.cpp (LogHeader): print compil date and time
	according to the output style.

	* src/Logger.cpp (init): feed the compil date and time fields.
	* src/LoggerOutput.hpp (LogHeader): added compil date and time fields.

2012-01-07  Jérôme Pasquier  <rainbru@free.fr>

	* rainbrurpg-logger.pc.in: pkg-config file generated and installed.

	* src/LoggerOutputTty.cpp  (startLog): change the Tty output
	colors to fix gray message issue

2011-12-09  Jérôme Pasquier  <rainbru@free.fr>

	* src/LoggerOutputYaml.cpp (escape): strings are in double quotes.
	* src/LoggerOutputYaml.cpp (logHeader): writes logfile-version.

	* src/tools/log_reader.rb: checks if passed files exists.
	* src/tools/log_reader.rb: opens file passed as argument.

2011-10-31  Jérôme Pasquier  <rainbru@free.fr>

	* Logger.hpp: Moved some functions to implementation.

2011-10-29  Jérôme Pasquier  <rainbru@free.fr>

	* configure.in: check for Boost.Program_options header

2011-07-16  Jérôme Pasquier  <rainbru@free.fr>

	* src/ObjectInspector: in its own files.
	* src/LoggerOutputTxt.hpp: in its own files.
	* src/LoggerOutputTty.hpp: renamed from LoggerOutputTxt.

2011-06-24  Jérôme Pasquier  <rainbru@free.fr>

	* src/tools/log_reader.rb: starts to parse hard-coded YAML.

2011-06-23  Jérôme Pasquier  <rainbru@free.fr>

	* src/LoggerOutputYaml: first tests.
