@@ -29,7 +29,9 @@
       - [ ] v3: sigsegv trap handling
 - [ ] Should find or create a suitable property editor 
 **** TODO Continue Logger in src/logger
-     CLOCK: [2012-01-19 jeu. 14:01]
+     CLOCK: [2012-01-25 mer. 18:10]--[2012-01-25 mer. 18:26] =>  0:16
+     CLOCK: [2012-01-25 mer. 11:46]--[2012-01-25 mer. 12:26] =>  0:40
+     CLOCK: [2012-01-19 jeu. 14:01]--[2012-01-19 jeu. 14:31] =>  0:30
      CLOCK: [2012-01-19 jeu. 12:59]--[2012-01-19 jeu. 13:25] =>  0:26
      CLOCK: [2012-01-13 ven. 12:08]--[2012-01-13 ven. 12:19] =>  0:11
      CLOCK: [2012-01-11 mer. 13:41]--[2012-01-11 mer. 14:11] =>  0:30
@@ -92,9 +94,11 @@
 	    - [X] Initialize it in Logger::init
 	    - [X] LoggerOutputs output modifed
 	    - [X] log_reader tool print it in infos panel
-- [ ] see why `make` doesn't work in src/tool
+- [X] see why `make` doesn't work in src/tool
+      `make MainWindow_ui.rb` correctly works but not `make`
 - [ ] Should remove autoproject generated files
       logger.cc, xmalloc.h, xmalloc.c ...
+- [ ] Test if archive correctly works (log_reader...)
 - [ ] May also handle Environment variables, config file...
       To know what level to output, configure Tty logger etc...
 - [ ] Logger may log process time
