@@ -17,6 +17,7 @@ logger - GPLv3 - The RainbruRPG's stream-oriented multi-output logging
    Please update version and revision in configure.in
 
 * v0.0.0-6 (07 jan 2012 - ???) SLOC ??? FT ??:??
+- (4) Fix the src/tool Makefile error
 - (3) Added execution date ad time to log header
 - Makes the Logger::init function set the binary compil time
 - Added compil adte ad time to log header
