@@ -1,3 +1,7 @@
+all: $(logreader_SOURCES)
+
+.PHONY: $(logreader_SOURCES)
+
 bin_PROGRAMS=logreader
 logreader_SOURCES=MainWindow_ui.rb
 
@@ -9,10 +13,13 @@ SUFFIXES= .rb .ui
 # $^ Dependencies list
 # $? List of deps most recent than target
 # $* File name without suffix
-.rb.ui: 
-	$(TOOL_RBUIC4) $*.ui -o $*_ui.rb
+.ui.rb:
+	$(TOOL_RBUIC) $*.ui -o $*_ui.rb
 
 MainWindow_ui.rb: MainWindow.ui
 	$(TOOL_RBUIC) MainWindow.ui -o MainWindow_ui.rb
+
+clean-local: 
+	rm -fr MainWindow_ui.rb
 
 logreader_LINK = @true # Disable linking
